Added Platinum Ingot

--- a/src/main/resources/assets/stonecraft/lang/en_us.json
+++ b/src/main/resources/assets/stonecraft/lang/en_us.json
@@ -9,5 +9,8 @@
   "item.stonecraft.handle": "Handle",
   "item.stonecraft.spear": "Spear",
 
+  "block.stonecraft.platinum_block": "Platinum Block",
+  "block.stonecraft.raw_platinum_block": "Raw Platinum Block",
+
   "creative_tab.stonecraft_tab": "Stonecraft"
 }
